gcc/testsuite/rust/rustc/ui/issues/issue-46186.rs
// run-rustfix

pub struct Struct {
    pub a: usize,
};
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

